# lamp

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  introduction.rst  lamp.rst  lamp_quick_start.ipynb  lamp_quick_start.md  lamp_quick_start.rst
examples/: lamp_cli.bat  lamp_cli.sh  lamp_cmd.sh  lamp_example.py  lamp_quick_start.html  lamp_quick_start.ipynb  lamp_quick_start.py  lamp_wf.py  test_gui.py
examples/data/: adducts_short.tsv  biocyc_chlamycyc_20180702_v1.tsv  df_pos_1.tsv  df_pos_2.xlsx  df_pos_3.csv  hmdb_urine_v4_0_20200910_v1.tsv  kegg_full_20210111_v1.tsv
lamp/: __init__.py  __main__.py  anno.py  gui.py  lamp.py  lamp_gui.py  stats.py  utils.py
lamp/lib/: adducts.txt
lamp/qt/: lamp_form.py  lamp_form.ui  ui_to_py.sh
